--- a/crawl/setup.cfg
+++ b/crawl/setup.cfg
@@ -17,6 +17,7 @@ long_description_content_type = text/markdown
 package_dir =
   =src
 packages = find:
+include_package_data = True
 
 [options.extras_require]
 dev =
